# LLM_RAG

./: .gitignore  README.md  env.yml  leaderboard_answers.json  leaderboard_answers_v1.json  leaderboard_answers_v2.json  pyproject.toml  run_pipeline.sh
analysis/exp_ab/: query_type_counts.csv  retrieval_details.jsonl  summary_by_method.csv  summary_by_method.json  summary_by_method_type.csv  summary_by_method_type.json
analysis/exp_ab_exp8_minilm/: query_type_counts.json  retrieval_details.jsonl  summary_by_method.csv  summary_by_method.json  summary_by_method_type.csv  summary_by_method_type.json
analysis/exp_c/: faithfulness_sheet.csv
analysis/exp_d/: representative_examples.md  selected_examples.json
configs/: crawl_config.yaml
scripts/: run_analysis_expA_B.sh  run_analysis_expA_B_exp8_minilm.sh  run_analysis_expC_prepare.sh  run_analysis_expC_summarize.sh  run_analysis_expD_examples.sh  run_analysis_minimal.sh  run_analysis_summary.sh  run_pipeline_exp1_closed_book.sh  run_pipeline_exp2_dense_only.sh  run_pipeline_exp3_sparse_only.sh  run_pipeline_exp4.sh  run_pipeline_exp4_hybrid_rrf.sh  run_pipeline_exp5_hybrid_minmax.sh  run_pipeline_exp6_hybrid_rrf_no_mmr.sh  run_pipeline_exp7_dense_only_minilm.sh  run_pipeline_exp8_hybrid_minilm.sh  run_rag_on_testset_txt.sh
src/analysis/: common.py  prepare_exp_c_faithfulness_sheet.py  prepare_exp_d_examples.py  run_exp_ab_retrieval_analysis.py  summarize_analysis_results.py  summarize_exp_c_faithfulness.py
src/crawl/: chunk.py  clean_txt.py  crawl.py  extract.py  make_crawl_config.py
src/process/: query_ppl.py  (+6 more)
