[project]
name = "llm-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bm25s>=0.3.0",
    "faiss-gpu-cu12>=1.13.2",
    "pdfplumber>=0.11.9",
    "pyyaml>=6.0.3",
    "sentence-transformers>=5.2.3",
    "transformers>=5.2.0",
]
