[project]
name = "llm-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "beautifulsoup4>=4.14.3",
    "bitsandbytes>=0.49.2",
    "bm25s>=0.3.0",
    "faiss-gpu-cu12>=1.13.2",
    "gptqmodel>=5.7.0",
    "matplotlib>=3.10.8",
    "optimum>=2.1.0",
    "pdfplumber>=0.11.9",
    "pyyaml>=6.0.3",
    "sentence-transformers>=5.2.3",
    "transformers>=5.2.0",
]
